# repartee

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  ROADMAP_IRCv3.md  logo.txt  review_29.md
.github/workflows/: release.yml
docs/: architecture.html  build.ts  commands.html  configuration.html  faq.html  first-connection.html  index.html  installation.html  logging.html  rfc_ircv3_coverage.md  rpe2e-dm-addendum.md  scripting-api.html  scripting-examples.html  scripting-getting-started.html  sessions.html  theming-format-strings.html  theming.html  web-frontend.html
docs/commands/: alias.md  ban.md  ignore.md  image.md  items.md  kb.md  kick.md  log.md  mentions.md  script.md  server.md  set.md  shrink.md  spellcheck.md  unban.md
docs/css/: style.css
docs/plans/: 2026-03-05-rustirc-implementation.md  2026-03-05-rustirc-ui-design.md  2026-03-05-storage-system-design.md  2026-03-05-storage-system-plan.md  2026-03-06-code-audit-issues.md  2026-03-06-ircv3-capabilities.md  2026-03-09-audit-CRITICAL.md  2026-03-09-audit-IMPORTANT.md  2026-03-09-audit-MINOR.md  2026-03-16-shell-buffer-plan.md  2026-03-16-web-shell-beamterm-prompt.md
docs/src/content/: architecture.md  configuration.md  faq.md  first-connection.md  index.md  installation.md  logging.md  scripting-api.md  scripting-examples.md  scripting-getting-started.md  sessions.md  theming-format-strings.md  theming.md  web-frontend.md
docs/src/templates/: page.html
docs/superpowers/plans/: 2026-03-18-nick-coloring.md  2026-05-09-log-browser.md  2026-06-19-draft-chathistory.md  2026-06-25-draft-multiline.md
docs/superpowers/specs/: 2026-05-09-log-browser-design.md  2026-06-01-builtin-gg-emotes-design.md  2026-06-19-draft-chathistory-design.md  2026-06-25-draft-multiline-design.md
scripts/irssi/: rpe2e.pl
scripts/weechat/: rpe2e.py
src/: app.rs  constants.rs  main.rs  nick_color.rs
src/app/: backlog.rs  dcc.rs  emote_anim.rs  input.rs  irc.rs  log_browser.rs  maintenance.rs  mentions.rs  mod.rs  scripting.rs  session.rs  shell.rs  shrink.rs  web.rs  who.rs
src/commands/: docs.rs  handlers_admin.rs  handlers_dcc.rs  handlers_e2e.rs  handlers_irc.rs  handlers_logs.rs  handlers_shrink.rs  handlers_ui.rs  helpers.rs  mod.rs  parser.rs  registry.rs  settings.rs
src/config/: defaults.rs  env.rs  mod.rs
src/dcc/: chat.rs  mod.rs  protocol.rs  types.rs
src/e2e/: chunker.rs  error.rs  handshake.rs  integration_tests.rs  keyring.rs  manager.rs  mod.rs  portable.rs  wire.rs
src/e2e/crypto/: aead.rs  ecdh.rs  fingerprint.rs  identity.rs  sig.rs
src/effects/: mod.rs
src/emotes/: mod.rs  parse.rs
src/image_preview/: cache.rs  detect.rs  fetch.rs  mod.rs
src/irc/: batch.rs  cap.rs  chathistory.rs  events.rs  extban.rs  flood.rs  formatting.rs  ignore.rs  isupport.rs  mod.rs  multiline.rs  netsplit.rs  sasl_scram.rs
src/scripting/: api.rs  engine.rs  event_bus.rs  mod.rs
src/scripting/lua/: mod.rs
src/session/: mod.rs  protocol.rs  shim.rs  writer.rs
src/shell/: mod.rs  types.rs
src/shrink/: client.rs  mod.rs
src/spellcheck/: mod.rs
src/state/: buffer.rs  connection.rs  events.rs  mod.rs  sorting.rs
src/storage/: crypto.rs  db.rs  mod.rs  query.rs  types.rs  writer.rs
src/theme/: loader.rs  mod.rs  parser.rs
src/ui/: buffer_list.rs  chat_view.rs  emote_layout.rs  emote_picker.rs  image_overlay.rs  input.rs  layout.rs  message_line.rs  mod.rs  nick_list.rs  shell_view.rs  splash.rs  status_line.rs  styled_text.rs  topic_bar.rs
src/ui/wizard/: mod.rs  server.rs
src/web/: auth.rs  broadcast.rs  mod.rs  preview.rs  protocol.rs  server.rs  snapshot.rs  tls.rs  ws.rs
static/web/: base-3276baaa6ea06a0.css  base-5c942c5d3a8c578c.css  base-7fd4bcc287207b87.css  base-840c2f60666312a8.css  base-9de8389dc38684aa.css  base-e578006d31c522de.css  base-ec126b62fdcdd8d9.css  index.html  repartee-web-12c9417c9152a458.js  repartee-web-12c9417c9152a458_bg.wasm  repartee-web-14135b8028980d4f_bg.wasm  repartee-web-157738c53ed7f7c.js  repartee-web-157738c53ed7f7c_bg.wasm  repartee-web-1762556498602e15_bg.wasm  repartee-web-1a65604e4468a659_bg.wasm  repartee-web-1abe4cf3d28db59b_bg.wasm  repartee-web-1f0aa56e1da92885_bg.wasm  repartee-web-2167b1feb053c8a4.js  repartee-web-2167b1feb053c8a4_bg.wasm  repartee-web-2647e88c30d6786f.js  repartee-web-2647e88c30d6786f_bg.wasm  repartee-web-3807bf6306150e86_bg.wasm  repartee-web-38e578d72a95fb36.js  repartee-web-38e578d72a95fb36_bg.wasm  repartee-web-4694e4985e05c280_bg.wasm  repartee-web-4a7472037b509f07.js  repartee-web-5290a76e999ef4c9.js  repartee-web-5290a76e999ef4c9_bg.wasm  repartee-web-57a5eb4dd499da55.js  repartee-web-57a5eb4dd499da55_bg.wasm  repartee-web-5dcfffd6d19c6ded.js  repartee-web-5dcfffd6d19c6ded_bg.wasm  repartee-web-6096989a2da31fb2.js  repartee-web-6096989a2da31fb2_bg.wasm  repartee-web-6360c858211a226f.js  repartee-web-6360c858211a226f_bg.wasm  repartee-web-6533ef480e46ffd8.js  repartee-web-6533ef480e46ffd8_bg.wasm  repartee-web-664a06a19b84d10.js  repartee-web-664a06a19b84d10_bg.wasm  (+39 more)
themes/: default.theme  homelab.theme  spring.theme
web-ui/: Cargo.toml  build.rs  index.html
web-ui/src/: app.rs  emotes.rs  format.rs  main.rs  nick_color.rs  protocol.rs  state.rs  ws.rs
web-ui/src/components/: buffer_list.rs  chat_view.rs  emoji_picker.rs  input.rs  layout.rs  login.rs  mod.rs  nick_list.rs  shell_view.rs  status_line.rs  topic_bar.rs  wizard.rs
web-ui/styles/: base.css  themes.css
