[package]
name = "rustirc"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1.50", features = ["full"] }
irc = "1.1"
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
unicode-width = "0.2"
thiserror = "2.0"
indexmap = { version = "2", features = ["serde"] }
regex = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
