[package]
name = "rustirc"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1.50", features = ["full"] }
irc = "1.1"
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
unicode-width = "0.2"
thiserror = "2.0"
indexmap = { version = "2", features = ["serde"] }
regex = "1"
rusqlite = { version = "0.38", features = ["bundled-full"] }
aes-gcm = "0.10"
rand = "0.10"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
uuid = { version = "1.21", features = ["v4"] }
hex = "0.4"
mlua = { version = "0.11.6", features = ["lua54", "vendored", "send"] }

[dev-dependencies]
tempfile = "3.26"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
perf = { level = "deny", priority = 1 }
redundant_clone = { level = "deny", priority = 2 }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
