[package]
name = "repartee-web"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = [
    "WebSocket", "MessageEvent", "ErrorEvent", "CloseEvent",
    "Location", "Window",
] }
wasm-bindgen = "0.2"
gloo-net = { version = "0.6", features = ["websocket"] }
console_error_panic_hook = "0.1"
